--- a/assets/sass/202312product_zakka1.scss
+++ b/assets/sass/202312product_zakka1.scss
@@ -363,17 +363,7 @@ body {
         height: 100%;
       }
 
-      .mainvisual { //メインビジュアル
-        width: fit-content;
-        height: 100%;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        @include mq_maxH() {
-          width: auto;
-        }
-
+      .mainvisual-wrapper{
         &.show{
           .heading{
             clip-path: inset(0 0 0 0);
@@ -405,9 +395,31 @@ body {
            
           }
         }
+      }
+
+      .mainvisual-wrapper{
+        position: relative;
+        height: 100%;
+      }
+
+      .mainvisual { //メインビジュアル
+        min-width: 100vw;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        @include mq{
+          min-width: fit-content;
+        }
+        @include mq_maxH() {
+          // width: 375px;
+          width: auto;
+        }
+
        .heading{
           font-size: 11px;
-          width: calc(657px/2);
+          width: calc(637px/2);
           display: flex;
           flex-direction: row-reverse;
           flex-direction: column;
@@ -417,7 +429,10 @@ body {
           @include DNPShueiMinPr6N_M();
           color: #000;
           line-height: calc(38/22);
-          position:relative;
+          position:absolute;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
           margin-top: calc(63px/2);
           clip-path: inset(0 0 100% 0);
           opacity: 0;
@@ -426,7 +441,7 @@ body {
 
           @include mq_maxH() {
             margin-top: calc((63/1270) * #{$new_vh});
-            width: calc((657/1270) * #{$new_vh});
+            width: calc((637/1270) * #{$new_vh});
           }
        }
 
@@ -446,14 +461,14 @@ body {
 
        .page1-main{
           width: calc(778px/2);
-          margin-top: 20px;
+          margin-top: calc(363px/2);
           opacity: 0;
           transform: translateY(10px);
           transition:opacity 1s ease .3s,transform 1s ease .3s;
 
           @include mq_maxH() {
             width: calc((778/1270) * #{$new_vh});
-            margin-top: calc((20/1270) * #{$new_vh});
+            margin-top: calc((363/1270) * #{$new_vh});
           }
        }
 
@@ -506,76 +521,103 @@ body {
           }
        }
 
-       .modal-link{
-          display: flex;
-          position: absolute;
-          bottom: calc(145px/2);
-          left: calc(557px/2);
-          cursor: pointer;
-          opacity: 0;
-          clip-path: inset(0 100% 0 0);
-          transition:clip-path .6s ease .9s,opacity 1s ease .9s;
-          padding-top: 4%;
-
-          @include mq_maxH() {
-            left: calc((557/1270) * #{$new_vh});
-            bottom: calc((145/1270) * #{$new_vh});
-          }
-
-          &:hover{
-
-            .modal-txt{
-              opacity: .5;
-            }
-
-            .modal-btn{
-              transform: rotate(180deg);
-            }
-
-          }
-       }
-
-       .modal-txt{
-        width: calc(249px/2);
-        transition: .3s ease;
-        @include mq_maxH() {
-          width: calc((249/1270) * #{$new_vh});
-        }
-       }
-
-       .modal-btn{
-         width: 14px;
-         height: 14px;
-         background: #fff;
-         border-radius: 50%;
-         position: relative;
-         margin-top: calc(-19px/2);
-         cursor: pointer;
-         transition: .5s ease;
-         @include mq_maxH() {
-          width: calc((28/1270) * #{$new_vh});
-          height: calc((28/1270) * #{$new_vh});
-          margin-top: calc((-19/1270) * #{$new_vh});
-        }
-         .plus{    
-           display: block;
-           width: calc(11px/2);
-           height: calc(11px/2);
-           position: absolute;
-           top: 50%;
-           left: 50%;
-           transform: translate(-50%,-50%);
-
-           img{
-            vertical-align: top;
-           }
-           @include mq_maxH() {
-            width: calc((11/1270) * #{$new_vh});
-            height: calc((11/1270) * #{$new_vh});
-          }
-        }
-       }
       }
+
+      .modal-link{
+        display: flex;
+        position: absolute;
+        bottom: calc(145px/2);
+        left: calc(557px/2);
+        cursor: pointer;
+        opacity: 0;
+        clip-path: inset(0 100% 0 0);
+        transition:clip-path 1s ease .9s,opacity 1s ease .9s;
+        padding-top: 4%;
+        padding-right: 2%;
+
+        @include mq_maxH() {
+          left: calc((557/1270) * #{$new_vh});
+          bottom: calc((145/1270) * #{$new_vh});
+        }
+
+        &:hover{
+
+          .modal-txt{
+            opacity: .5;
+          }
+
+          .modal-btn{
+            transform: rotate(180deg);
+          }
+
+          .modal-btn{
+            transform: scale(1.1);
+          }
+
+        }
+     }
+
+     .modal-txt{
+      width: calc(249px/2);
+      transition: .3s ease;
+      @include mq_maxH() {
+        width: calc((249/1270) * #{$new_vh});
+      }
+     }
+
+     .modal-btn{
+       width: 14px;
+       height: 14px;
+       background: #fff;
+       border-radius: 50%;
+       position: relative;
+       margin-top: calc(-19px/2);
+       cursor: pointer;
+       transition: .5s ease;
+       animation: btnScale 1.3s ease 2s infinite;
+       @include mq_maxH() {
+        width: calc((28/1270) * #{$new_vh});
+        height: calc((28/1270) * #{$new_vh});
+        margin-top: calc((-19/1270) * #{$new_vh});
+      }
+
+      @keyframes btnScale{
+        0%{
+          transform: scale(1);
+        }
+        50%{
+          transform: scale(1.1);
+        }
+        100%{
+          transform: scale(1);
+        }
+      }
+
+      
+       .plus{    
+         display: block;
+         width: calc(11px/2);
+         height: calc(11px/2);
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%,-50%);
+         
+         img{
+           vertical-align: top;
+           animation:  rotateCircle 2.5s linear infinite;
+         }
+         @include mq_maxH() {
+          width: calc((11/1270) * #{$new_vh});
+          height: calc((11/1270) * #{$new_vh});
+        }
+
+        @keyframes rotateCircle {
+          0%   { transform: rotate(0deg); }
+          100% { transform: rotate(360deg); }
+        }
+      }
+     }
 
 
       .item-content-wrapper { ///アイテムコンテンツ
@@ -1222,33 +1264,45 @@ body {
               margin-left: calc((83/1270) * #{$new_vh});
             }
 
-            .ph{
+
+            
+            .ph1{
               width: calc(850px/2);
+              &.show{
+                animation: appear1 3s steps(2) .5s infinite;
+              }
               @include mq_maxH() {
                 width: calc((850/1270) * #{$new_vh});
               }
             }
-
-            .ph1{
-              &.show{
-                animation: appear1 3s steps(2) .5s infinite;
-              }
-            }
             .ph2{
+              width: calc(711px/2);
               position: absolute;
-              top: 0;
-              left: 0;
+              top: calc(90px/2);
+              left: calc(73px/2);
               &.show{
                 animation: appear2 3s steps(2) .5s infinite;
+              }
+
+              @include mq_maxH() {
+                width: calc((711/1270) * #{$new_vh});
+                top: calc((90/1270) * #{$new_vh});
+                left: calc((73/1270) * #{$new_vh});
               }
             }
             
             .ph3{
+              width: calc(590px/2);
               position: absolute;
-              top: 0;
-              left: 0;
+              top: calc(144px/2);
+              left: calc(133px/2);
               &.show{
                 animation: appear3 3s steps(2) .5s infinite;
+              }
+              @include mq_maxH() {
+                width: calc((590/1270) * #{$new_vh});
+                top: calc((144/1270) * #{$new_vh});
+                left: calc((133/1270) * #{$new_vh});
               }
             }
             .txt-contents{
@@ -2836,6 +2890,7 @@ body {
         margin-left: 35.5px;
         @include mq_maxH() {
           min-width: calc((750/1270) * #{$new_vh});
+          margin-left: calc((71/1270) * #{$new_vh});
         }
 
        
@@ -3074,6 +3129,7 @@ body {
       .footer{
         min-width: calc(750px/2);
         color: #fff;
+        overflow: hidden;
         @include mq_maxH() {
           min-width: calc((750/1270) * #{$new_vh});
         }
@@ -3081,6 +3137,7 @@ body {
         .footer-main-img{
           width: 100%;
           position: relative;
+          transition: transform .5s ease;
 
           .ofuda{
             width: calc(67px/2);
@@ -3092,6 +3149,12 @@ body {
               top: calc((44/1270) * #{$new_vh});
               left: calc((38/1270) * #{$new_vh});
             }
+          }
+
+          @include mq{
+            &:hover{
+              transform: scale(1.02);
+            } 
           }
         }
 
@@ -3117,7 +3180,7 @@ body {
           display: block;
           width: fit-content;
           position: relative;
-          margin-bottom: calc(95px/2);
+          margin-bottom: calc(49px/2);
           transition: .3s ease;
 
           &:hover{
@@ -3137,7 +3200,7 @@ body {
 
           }
           @include mq_maxH() {
-            margin-bottom: calc((95/1270) * #{$new_vh});
+            margin-bottom: calc((49/1270) * #{$new_vh});
             font-size: calc((28/1270) * #{$new_vh});
           }
 
@@ -3212,9 +3275,10 @@ body {
       visibility: visible;
     }
 
-    .modal{
-      width: calc(550px/2);
-      height: calc(593px/2);
+    .modal {
+      width: calc(550px / 2);
+      // height: calc(593px / 2);
+      height: 268.5px;
       position: fixed;
       top: 50%;
       left: 50%;
@@ -3237,10 +3301,11 @@ body {
       z-index: 2;
     }
     
-    .modal-inner{
+    .modal-inner {
       border: 1px solid #d6db51;
-      width: calc(500px/2);
-      height: calc(547px/2);
+      width: calc(500px / 2);
+      // height: calc(547px / 2);
+      height: 244.5px;
       position: relative;
     }
     .close-btn{
@@ -3281,7 +3346,7 @@ body {
 }
 
 ///西山スタイル
-.mainvisual {
+.mainvisual-wrapper {
   margin-left: 0;
   @include mq {
     margin-left: (96px/2);
@@ -3314,13 +3379,13 @@ body {
     display: flex;
    
   
-    .block1,
-    .block3 {
+    .scroll-block1,
+    .scroll-block3 {
       width: (111px/2);
       background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-bg-layer.png);
       background-size: cover;
     }
-    .block2 {
+    .scroll-block2 {
       width: 100%;
       margin: 0 auto;
       box-shadow: 1px 1px 20px 7px rgba(0, 0, 0, 0.11);
